Impllemented users/me endpoint
